# hasura_graphql_tooling_demo

./: README.md
hasura_tooling/: .env.sample  README.md  envs  pyproject.toml
hasura_tooling/hasura_tooling/: __init__.py  append_allow_agg_and_computed_fields_to_shards.py  check_hasura_metadata_tables_yaml.py  compare_hasura_permissions_definitions_lib.py  create_bq_metadata_by_role.py  create_or_append_relationship_e2e_tests.py  get_empty_or_missing_api_tables_lib.py  hasura_metadata_integrity_checker.py  hasura_metadata_sdk.py  lookup_alias_by_actual_table_name.py  relationship_e2e_query_add_notnull.py  remote_schema.py  remote_schema_permissions.py  shard_hasura_tables_yaml_lib.py  update_fn_create_generic_permissions_by_data_supersets.py  update_fn_create_relationships.py  update_fn_delete_all_permissions_by_roles.py  update_permissions_e2e_test_mapping_metadata.py  util_filepath_and_fileloader.py  util_introspection.py  util_postgres_query.py  util_yaml_dumper.py
hasura_tooling/tests/: test_create_bq_metadata_by_role.py  test_remote_schema.py  test_remote_schema_permissions.py  test_util_filepath_and_fileloader.py
hasura_tooling_cli/: README.md  envs  pyproject.toml
hasura_tooling_cli/hasura_tooling_cli/: __init__.py  __main__.py  compare_hasura_permissions_definitions_cli.py  deprecate_relationships_and_columns.py  get_empty_or_missing_api_tables_cli.py  get_relationships_metadata.py  update_allow_agg_by_role.py
hasura_tooling_cli/tests/: README.md  test_api_postgres_tables_not_empty_or_missing.py  test_domain_rules.py  test_h_metadata_update_tooling.py
(+6 files in other folders)
